--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.2.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.13"
   },
   "devDependencies": {
     "eslint": "^7.3.0",
@@ -22,6 +25,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
+    "sequelize-cli": "^5.5.1",
     "sucrase": "^3.15.0"
   }
 }
