--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@sentry/node": "^5.19.2",
     "bcryptjs": "^2.4.3",
     "bee-queue": "^1.2.3",
+    "cors": "^2.8.5",
     "date-fns": "^2.0.0-beta.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
