--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-saga": "^0.3.1",
     "react-scripts": "3.4.3",
+    "react-toastify": "^6.0.8",
     "reactotron-react-js": "^3.3.7",
     "reactotron-redux": "^3.1.3",
     "reactotron-redux-saga": "^4.2.3",
